<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookHaven</string>
    <string name="nav_home">Accueil</string>
    <string name="nav_library">Bibliothèque</string>
    <string name="nav_offline">Téléchargements</string>
    <string name="nav_downloads">Téléchargements</string>
    <string name="nav_settings">Réglages</string>
    <string name="search_hint">Search books…</string>
    <string name="server_url_label">Server URL</string>
    <string name="server_url_hint">http://192.168.1.x:5000</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="server_config">Server Configuration</string>
    <string name="no_books">No books found</string>
    <string name="loading">Loading…</string>
    <string name="error_loading">Error loading books</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="home_resume">Reprendre</string>
    <string name="resume_reading">Reprendre la lecture</string>
    <string name="home_in_progress">En cours</string>
    <string name="home_recent">Récemment ajoutés</string>
    <string name="home_categories">Catégories</string>
    <string name="upload_book">Upload book</string>
    <string name="select_file">Select file…</string>
    <string name="confirm_upload">Confirm Upload</string>
    <string name="offline_mode">OFFLINE MODE</string>
    <string name="scan_library">Scan library</string>
    <string name="create_account">Create account</string>
    <string name="log_out">Log out</string>
</resources>
